# challenge-meli-marcela-angel

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-extra.txt  requirements-notebook.txt  requirements.txt
config/: config.yaml
data/processed/: corpus.jsonl  dedup_report.json  manifest.json  near_dedup_report.json  qa.jsonl  qc_report.json  split_report.json
docs_raw/2p-revenue-optimizer-api/0.2.2/: documentationTypes.json
docs_raw/2p-revenue-optimizer-api/latest/: documentationTypes.json
docs_raw/catalog-portfolio-api/latest/: documentationTypes.json
docs_raw/demand-forecast-docs/latest/: documentationTypes.json
docs_raw/order-workflow-api/5.6.2-hotfix-1/: documentationTypes.json
docs_raw/payment-promise-gateway/0.0.10-test-crc-migration/: documentationTypes.json
docs_raw/payment-promise-gateway/latest/: documentationTypes.json
docs_raw/price-engine-api/latest/: documentationTypes.json
docs_raw/traffic-gate-api/latest/: documentationTypes.json
notebooks/: diagnostico.ipynb
presentation/: presentation-pipeline-flow.html
src/docs2llm/: __init__.py  __main__.py  chunking.py  cli.py  config.py  corpus_build.py  dedup.py  discovery.py  normalize.py  parse_html.py  parse_markdown.py  parse_openapi.py  parse_units.py  qa_build.py  qa_grounding.py  qa_llm_generate.py  qa_templates.py  qa_units.py  splitting.py
src/docs2llm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_chunking.py  test_dedup.py  test_grounding.py  test_llm_generate.py  test_qa_build.py  test_qa_output_invariants.py  test_split_no_leakage.py
(+70 files in other folders)
